# xiaoqiang_nlp

./: CMakeLists.txt  README.md  package.xml
launch/: talk_bot.launch  tencent.launch  tuling.launch
src/: xiaoqiang_nlp_node.py
src/engines/: tencent.py  tuling.py
src/engines/tencent_sdk/: apiutil.py
